Feature/transaction (#36)
* ♻️refactor(server): Remove the ID field from the request DTO and instead operate the budget through the category.

Author: Shiyu Li <jp2022213661@qmul.ac.uk>

* ♻️ refactor(client): delete dead code

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ♻️ refactor(client): delete dead code

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ♻️ refactor(client): delete dead code

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ♻️ refactor(client): delete dead code

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ✨ feat(client): Added Dashboard Redirect Logics

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ♻️ refactor(client): Delete Dead Code

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ✨ feat(client): Implement partial interaction between Dashboard and backend

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* 🐛 fix(client): Bind Add Transaction event

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ✨ feat(client): Add some dashboard logic

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ✨ feat(client): implement account addition functionality and enhance UI layout

Author: Yujie Yang <jp2022213663@qmul.ac.uk>

* ✅ test(server): Create JUnit test for json transaction import methods

* ✨ feat(client): Implement the account module of Dashboard

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ✨ feat(client): Implemented partial integration between the account page and the backend

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ✨ feat(client): Implemented partial integration between the account page and the backend

Author: Youhao Zhong <jp2022213676@qmul.ac.uk>

* ✅test(server): Add unit tests for the budget service,
including tests for adding, updating, deleting budgets,
overspending checks, warning checks, obtaining budget lists,
obtaining total budget, and obtaining total expenditures, etc.

Author: Shiyu Li <jp2022213661@qmul.ac.uk>

* 🐛 fix(client): Solved the problem of path errors after refactoring

Author: Youhao Z