@@ -1,33 +1,41 @@
-package com.se.aiconomy.client.controller;
+package com.se.aiconomy.client.controller.budgets;
 
 //import com.alibaba.fastjson2.internal.asm.Label;
 
+import com.se.aiconomy.client.controller.BaseController;
+import com.se.aiconomy.server.handler.BudgetRequestHandler;
+import com.se.aiconomy.server.model.dto.budget.request.BudgetAddRequest;
 import javafx.application.Platform;
+import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.Node;
+import javafx.scene.control.Label;
+import javafx.scene.control.TextField;
 import javafx.scene.control.ToggleGroup;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
+import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
-import javafx.scene.input.MouseEvent;
-import javafx.event.ActionEvent;
 import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
+import lombok.Getter;
 import lombok.Setter;
-import javafx.scene.control.Label;
-
 
 import java.util.List;
 
 @Setter
 public class AddBudgetController extends BaseController {
+    private final BudgetRequestHandler budgetRequestHandler = new BudgetRequestHandler();
+    public TextField budgetAmountInput;
+    public TextField additionalNotesInput;
     @FXML
     private ToggleGroup toggleGroup;
-
+    @Setter
+    @Getter
+    private BudgetController budgetController;
     @FXML
     private StackPane rootPane;
-
     @FXML
     private VBox vbox1;
     @FXML
@@ -44,14 +52,8 @@ public class AddBudgetController extends BaseController {
     private VBox vbox7;
     @FXML
     private VBox vbox8;
-    @FXML
-    private VBox vboxMonthly, vboxWeekly, vboxYearly;
-
-    public interface OnOpenListener {
-        void onOpenAddBudgetPanel();
-    }
-
     private BudgetController.OnOpenListener openListener;
+    private String selectedCategory;
 
     @FXML
     public void setOnOpenListener(BudgetController.OnOpenListener listener) {
@@ -73,7 +75,11 @@ public class AddBudgetController extends BaseController {
     }
 
     private void init() {
+    }
 
+    @FXML
+    private void onCancel(ActionEvent event) {
+        closeDialog(event);
     }
 
 //    @FXML
@@ -84,14 +90,25 @@ public class AddBudgetController extends BaseController {
 //    }
 
     @FXML
-    private void onCancel(ActionEvent event) {
+    private void onSave(ActionEvent event) {
+        addBudget();
         closeDialog(event);
     }
 
-    @FXML
-    private void onSave(ActionEvent event) {
-        // TODO: 保存逻辑
-        closeDialog(event);
+    private void addBudget() {
+        try {
+            double budgetAmount = Double.parseDouble(budgetAmountInput.getText());
+            BudgetAddRequest budgetAddRequest = new BudgetAddRequest();
+            budgetAddRequest.setUserId(userInfo.getId());
+            budgetAddRequest.setBudgetCategory(selectedCategory);
+            budgetAddRequest.setBudgetAmount(budgetAmount);
+            budgetAddRequest.setAlertSettings(0.8);
+            budgetAddRequest.setNotes(additionalNotesInput.getText());
+            budgetRequestHandler.handleBudgetAddRequest(budgetAddRequest);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
     }
 
     @FXML
@@ -117,6 +134,9 @@ public class AddBudgetController extends BaseController {
                         }
                     }
                 }
+            }
+            if (node instanceof Label) {
+                selectedCategory = ((Label) node).getText();
             }
         }
 
@@ -163,16 +183,16 @@ public class AddBudgetController extends BaseController {
         }
     }
 
-
     private void closeDialog(ActionEvent event) {
         if (rootPane != null) {
             rootPane.getChildren().removeIf(node ->
-                    node != rootPane.getChildren().get(0) // 保留主页面，移除弹窗和遮罩
+                    node != rootPane.getChildren().getFirst() // 保留主页面，移除弹窗和遮罩
             );
         }
+        budgetController.refresh();
     }
 
-    public ToggleGroup getToggleGroup() {
-        return toggleGroup;
+    public interface OnOpenListener {
+        void onOpenAddBudgetPanel();
     }
 }
